--- a/MyCity4Kids/MyCity4Kids/res/drawable/campaign_detail_bottom_btn.xml
+++ b/MyCity4Kids/MyCity4Kids/res/drawable/campaign_detail_bottom_btn.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <solid android:color="@color/campaign.list.buttons" />
+    <solid android:color="@color/campaign_list_buttons" />
 
 
 </shape>
