--- a/MyCity4Kids/MyCity4Kids/res/drawable/campaign_rejected.xml
+++ b/MyCity4Kids/MyCity4Kids/res/drawable/campaign_rejected.xml
@@ -4,7 +4,7 @@
 
     <corners
         android:radius="@dimen/space_10" />
-    <solid android:color="@color/campaign_expired" />
+    <solid android:color="@color/campaign_rejected" />
 
 
 </shape>
