--- a/MyCity4Kids/MyCity4Kids/res/drawable/campaign_subscription_open.xml
+++ b/MyCity4Kids/MyCity4Kids/res/drawable/campaign_subscription_open.xml
@@ -4,7 +4,7 @@
 
     <corners
         android:radius="@dimen/space_10" />
-    <solid android:color="@color/campagin.submission.open" />
+    <solid android:color="@color/campagin_submission_open" />
 
 
 </shape>
