--- a/MyCity4Kids/MyCity4Kids/res/drawable/subscribe_now.xml
+++ b/MyCity4Kids/MyCity4Kids/res/drawable/subscribe_now.xml
@@ -4,7 +4,7 @@
 
     <corners
         android:radius="@dimen/space_10" />
-    <solid android:color="@color/campagin.subscribe.now" />
+    <solid android:color="@color/campagin_subscribe_now" />
 
 
 </shape>
