--- a/MyCity4Kids/MyCity4Kids/res/layout/paymets_modes_adapter.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/paymets_modes_adapter.xml
@@ -43,8 +43,6 @@
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
                     android:layout_marginLeft="40dp"
-
-
                     android:buttonTint="@color/app_red" />
 
                 <ImageView
@@ -161,10 +159,7 @@
                 android:layout_centerHorizontal="true"
                 android:background="@drawable/campaign_border_round_rectangular_layout"
                 android:elevation="@dimen/space_10"
-                android:padding="15dp"
-
-
-                />
+                android:padding="15dp" />
 
             <TextView
                 android:id="@+id/nonDefaultEditTextView"
@@ -175,7 +170,7 @@
                 android:layout_marginRight="26dp"
                 android:text="Edit"
                 android:textColor="@color/app_red"
-                android:textSize="20sp"
+                android:textSize="14sp"
                 android:visibility="invisible" />
 
             <View
@@ -198,8 +193,8 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/imageRadioButtonContainerNonDefault"
             android:layout_marginTop="@dimen/space_15"
+            android:textColor="@color/black"
             android:gravity="center"
-            android:text="fbvfvfbfubvifbvufbuvbefbvebfuyvbefyuvbuyebv"
             android:textSize="16sp"
             app:fontName="oswald_regular.ttf" />
 
